fix(MMV): 🐛 remove styles for :not( .mw-mmv-untruncated )

--- a/skinStyles/extensions/MultimediaViewer/mmv.less
+++ b/skinStyles/extensions/MultimediaViewer/mmv.less
@@ -190,74 +190,74 @@
 	}
 }
 
-.mw-mmv-post-image:not( .mw-mmv-untruncated ) {
-	color: ~'hsl( var( --color-primary__h ), 45%, 80% )'; // color-base in dark mode
-	background-color: transparent;
+// .mw-mmv-post-image:not( .mw-mmv-untruncated ) {
+// 	color: ~'hsl( var( --color-primary__h ), 45%, 80% )'; // color-base in dark mode
+// 	background-color: transparent;
 
-	.mw-mmv {
-		&-title-para {
-			max-height: 3rem;
-			padding-block: 0 !important;
-		}
+// 	.mw-mmv {
+// 		&-title-para {
+// 			max-height: 3rem;
+// 			padding-block: 0 !important;
+// 		}
 
-		&-title {
-			overflow: hidden;
-			color: ~'hsl( var( --color-primary__h ), 80%, 95% )';
-		}
+// 		&-title {
+// 			overflow: hidden;
+// 			color: ~'hsl( var( --color-primary__h ), 80%, 95% )';
+// 		}
 
-		&-stripe-button.mw-mmv-description-page-button {
-			margin: 0;
+// 		&-stripe-button.mw-mmv-description-page-button {
+// 			margin: 0;
 
-			&.cdx-button.cdx-button--fake-button--enabled.cdx-button--weight-primary.cdx-button--action-progressive {
-				background-color: transparent;
-				border-color: rgba( 255, 255, 255, 0.11 ); // border-color-interactive in dark mode
+// 			&.cdx-button.cdx-button--fake-button--enabled.cdx-button--weight-primary.cdx-button--action-progressive {
+// 				background-color: transparent;
+// 				border-color: rgba( 255, 255, 255, 0.11 ); // border-color-interactive in dark mode
 
-				&:hover {
-					background-color: var( --background-color-button-quiet--hover );
-				}
+// 				&:hover {
+// 					background-color: var( --background-color-button-quiet--hover );
+// 				}
 
-				&:active {
-					background-color: var( --background-color-button-quiet--active );
-				}
-			}
-		}
+// 				&:active {
+// 					background-color: var( --background-color-button-quiet--active );
+// 				}
+// 			}
+// 		}
 
-		&-credit,
-		&-image-links {
-			color: ~'hsl( var( --color-primary__h ), 35%, 65% )'; // color-subtle in dark mode
-		}
+// 		&-credit,
+// 		&-image-links {
+// 			color: ~'hsl( var( --color-primary__h ), 35%, 65% )'; // color-subtle in dark mode
+// 		}
 
-		&-image-links li.mw-mmv-license-li {
-			line-height: inherit;
-		}
+// 		&-image-links li.mw-mmv-license-li {
+// 			line-height: inherit;
+// 		}
+// 	}
+// }
+
+// .mw-mmv-untruncated {
+.mw-mmv {
+	&-above-fold {
+		padding-bottom: var( --space-xs );
+		margin-bottom: var( --space-md );
+		border-bottom: 1px solid var( --border-color-base );
 	}
-}
 
-.mw-mmv-untruncated {
-	.mw-mmv {
-		&-above-fold {
-			padding-bottom: var( --space-xs );
-			margin-bottom: var( --space-md );
-			border-bottom: 1px solid var( --border-color-base );
+	&-image-metadata {
+		line-height: var( --line-height-medium ); // restore line height after expanded
+
+		@media ( max-width: @max-width-breakpoint-mobile ) {
+			flex-direction: column;
 		}
 
-		&-image-metadata {
-			line-height: var( --line-height-medium ); // restore line height after expanded
+		&-desc-column {
+			max-width: var( --width-layout );
+			transform: none;
+		}
 
+		&-links-column {
 			@media ( max-width: @max-width-breakpoint-mobile ) {
-				flex-direction: column;
-			}
-
-			&-desc-column {
-				max-width: var( --width-layout );
-				transform: none;
-			}
-
-			&-links-column {
-				@media ( max-width: @max-width-breakpoint-mobile ) {
-					max-width: none;
-				}
+				max-width: none;
 			}
 		}
 	}
 }
+// }
